@@ -138,7 +138,7 @@ $stripe_settings = apply_filters(
 			'label'       => __( 'Button Type', 'woocommerce-gateway-stripe' ),
 			'type'        => 'select',
 			'description' => __( 'Select the button type you would like to show.', 'woocommerce-gateway-stripe' ),
-			'default'     => 'buy',
+			'default'     => 'default',
 			'desc_tip'    => true,
 			'options'     => [
 				'default' => __( 'Default', 'woocommerce-gateway-stripe' ),
